# multipleconsumer

./: .clang-format  .gitignore  README.md
project1/: main.cpp  meson.build
project1/subprojects/: message.wrap
project1/subprojects/packagefiles/message/: meson.build
project2/: main.cpp  meson.build
project2/subprojects/: message.wrap
project2/subprojects/packagefiles/message/: meson.build
project3/: meson.build
project3/subprojects/: message.wrap
